src/test/deca/syntax/invalid/created/include/circularInclude/fB.decah
#include "fB.decah"

class B {
}

